--- a/style.css
+++ b/style.css
@@ -426,20 +426,26 @@ footer {
 
 /* ========== Mobiles standards (moins de 600px) ========== */
 @media (max-width: 599px) {
+
+    .container{
+        --bs-gutter-x: 0rem;
+    }
     .header {
         width: 80%;
         font-size: 1rem;
         height: auto;
+        margin-left: 10%;
     }
     .header .fa-bars {
         display: block;
     }
     
     .info {
-        padding-top: 15%;
+        padding-top: 20%;
     }
     .text-info {
         max-width: 90%;
+        text-align: center;
     }
     .photo img {
         max-width: 250px;
@@ -447,6 +453,7 @@ footer {
     .social-links {
         padding-top: 10%;
         padding-bottom: 10%;
+        font-size: smaller;
     }
     .hero{
         min-height: 670px;
