--- a/style.css
+++ b/style.css
@@ -125,8 +125,8 @@ a{
 }
 
 .social-icon {
-    background-color: #333;
-    color: var(--color2);
+    background-color: #b34051;
+    color: var(--color1);
     padding: 10px 20px;
     border-radius: 30px;
     text-transform: uppercase;
@@ -454,6 +454,7 @@ footer {
         padding-top: 10%;
         padding-bottom: 10%;
         font-size: smaller;
+
     }
     .hero{
         min-height: 670px;
